# jogo-da-forca-LP1

./: CMakeLists.txt  README.md  author.md
data/: palavras_caractere.txt  palavras_formatacao.txt  palavras_frequencia.txt  palavras_tamanho.txt  scores.txt  scores_formatacao.txt  scores_pontuacao.txt  scores_vazios.txt
include/: Forca.hpp  tabelas.hpp  utils.hpp
src/: Forca.cpp  main.cpp  tabelas.cpp  utils.cpp
